# EngineFEA

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude-local/: CLAUDE.local.md
cmake/: copy_if_exists.cmake
engine/: hello_window.cpp
engine/experiments/: ex1.cpp  ex3.cpp  hello_window.cpp  rectangle.cpp  shader.cpp  shader_class.cpp
engine/experiments/exercises/hello/: ex2.cpp
engine/experiments/exercises/shadersChap/: ex4.cpp
engine/experiments/include/: shader.vs  shaderh.h
engine/experiments/learning/shadersChap/: shader2.cpp
engine/prod/: eng.cpp  shader.h
engine/prod/shaders/: plain.vs  viga.fs  viga.vs
math/: assembly.py
modelo_core/: __init__.py  assembly.py  beam2d.py  coordxtr.py  eigen_solver.py
modelo_matematico/: __init__.py  config.py  exportar_engine.py  fem_solver.py  gerar_malha_opengl.py  main.py  results_io.py
output/: Resultados_FEA.npz  Resultados_FEA_metadata.json  resultados_mEF_cc0_aco_titanio_005_metadata.json
tests/: __init__.py  test.py
